[gd_scene load_steps=12 format=3 uid="uid://cu1yy5jcprk4p"]

[ext_resource type="Script" path="res://UI/Scenes/HeatBar/heat_bar.gd" id="1_1hy38"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_brmqf"]
bg_color = Color(0.12, 0.12, 0.12, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0i54a"]
bg_color = Color(0.0980392, 0.333333, 0.188235, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3jrm"]
bg_color = Color(0.0588235, 0.0588235, 0.0784314, 0.784314)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="Animation" id="Animation_uahyd"]
resource_name = "detection_pulse"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DetectionProgress:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.2, 0.2, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cdhbm"]
resource_name = "detected"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HeatLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.2, 0.2, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dru2s"]
resource_name = "fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8ypnp"]
resource_name = "heat_increase"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeatProgress:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_v3p9r"]
resource_name = "heat_decrease"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeatProgress:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.8, 0.8, 0.8, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_f4p2s"]
resource_name = "fade_out"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wewn7"]
_data = {
"detection_pulse": SubResource("Animation_uahyd"),
"detected": SubResource("Animation_cdhbm"),
"fade_in": SubResource("Animation_dru2s"),
"fade_out": SubResource("Animation_f4p2s"),
"heat_decrease": SubResource("Animation_v3p9r"),
"heat_increase": SubResource("Animation_8ypnp")
}

[node name="HeatBar" type="Control"]
modulate = Color(1, 1, 1, 0.9)
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -205.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 85.0
grow_horizontal = 0
pivot_offset = Vector2(94, 35)
script = ExtResource("1_1hy38")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_brmqf")

[node name="HeatLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.5
offset_top = 8.0
offset_right = 44.5
offset_bottom = 34.0
grow_horizontal = 2
text = "NONE"
horizontal_alignment = 1

[node name="HeatProgress" type="ProgressBar" parent="."]
modulate = Color(0.2, 0.8, 0.2, 1)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = -36.0
offset_right = -11.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(84, 7)
theme_override_styles/fill = SubResource("StyleBoxFlat_0i54a")
max_value = 1.0
value = 0.05
show_percentage = false

[node name="DetectionProgress" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = -21.0
offset_right = -11.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_i3jrm")
theme_override_styles/fill = SubResource("StyleBoxFlat_0i54a")
max_value = 1.0
step = 0.01
value = 0.3
show_percentage = false

[node name="DetectionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -21.0
offset_right = 0.5
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "DETECTION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wewn7")
}
